studyspace-infra.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Automation of the deployment of StudySpace TFG: EC2, RDS, S3 and Security'

Parameters:
  KeyName:
    Description: Choose existing .pem key to log in via SSH
    Type: AWS::EC2::KeyPair::KeyName
  DBPassword:
    NoEcho: true
    Description: Password for the production MySQL database
    Type: String
  JWTSecret:
    NoEcho: true
    Description: The long secret to signing the JWTs
    Type: String
  MailPassword:
    NoEcho: true
    Description: Gmail app password
    Type: String

Resources:
  # BUCKET S3 (Add the account number to the name to make it unique worldwide)
  StudySpaceBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "studyspace-images-${AWS::AccountId}"

  # SECURITY GROUP FOR EC2 (Open port 80 web and 22 SSH)
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP traffic to the web and SSH for administration
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  # SECURITY GROUP FOR RDS (Only lets enter the EC2)
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MySQL SecurityGroup - Only accessible from EC2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !GetAtt EC2SecurityGroup.GroupId

  # RDS
  StudySpaceDB:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: study_space_db
      DBInstanceClass: db.t3.micro
      AllocatedStorage: 20
      Engine: mysql
      EngineVersion: '8.0'
      MasterUsername: admin
      MasterUserPassword: !Ref DBPassword
      VPCSecurityGroups:
        - !GetAtt RDSSecurityGroup.GroupId

  # IAM ROL FOR EC2 (to access S3)
  EC2S3Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: [ec2.amazonaws.com]
            Action: ['sts:AssumeRole']
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3FullAccess

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2S3Role

  # EC2 
  StudySpaceServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro
      ImageId: ami-0f77db91f4f6a52b2 # Ubuntu 24.04 on eu-south-2
      KeyName: !Ref KeyName
      IamInstanceProfile: !Ref EC2InstanceProfile
      SecurityGroupIds:
        - !GetAtt EC2SecurityGroup.GroupId
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Install Docker
          apt-get update -y
          apt-get install -y docker.io docker-compose-v2
          systemctl start docker
          systemctl enable docker
          usermod -aG docker ubuntu

          # GET PUBLIC IP FOR EMAILS (IMDSv2)
          TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600")
          PUBLIC_IP=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" -s http://169.254.169.254/latest/meta-data/public-ipv4)

          # Prepare environment
          mkdir -p /home/ubuntu/app
          cd /home/ubuntu/app

          # Create the docker-compose.yml 
          cat << 'EOF' > docker-compose.yml
          services:
            backend:
              image: guiller25/studyspace-app:test-aws9
              container_name: studyspace_prod
              ports:
                - "80:8080"
              environment:
                - APP_FRONTEND_URL=http://REPLACE_ME_PUBLIC_IP
                - SPRING_DATASOURCE_URL=jdbc:mysql://${StudySpaceDB.Endpoint.Address}:3306/study_space_db?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
                - SPRING_DATASOURCE_USERNAME=admin
                - SPRING_DATASOURCE_PASSWORD=${DBPassword}
                - MINIO_BUCKET=${StudySpaceBucket}
                - JWT_SECRET=${JWTSecret}
                - MAIL_PASSWORD=${MailPassword}
                - APP_DB_INIT_ENABLED=true
                - SPRING_JPA_HIBERNATE_DDL_AUTO=update
                - AWS_ACCESS_KEY_ID=
                - AWS_SECRET_ACCESS_KEY=
              restart: always
          EOF

          # Inject the dynamic public IP
          sed -i "s/REPLACE_ME_PUBLIC_IP/$PUBLIC_IP/g" docker-compose.yml
          
          # Launch the app
          docker compose up -d

Outputs:
  WebURL:
    Description: "Link to app"
    Value: !Sub "http://${StudySpaceServer.PublicIp}"
